# key

./: .gitignore  README.md  a.txt  build_spanish_foodkeeper.py  curl_in_server.txt  flake.nix  food_storage.csv  key.db  main.py  products.csv  pyproject.toml  res.json  result  run.py  test_auth.sh  unify_food_database.py
src/: api.py  auth.py  auth_routes.py  colombian_fast_storage.py  database.py  exploration.py  food_database.py  models.py  must_have_receipts.py  openfood.py  receipt_processor.py  result.py  translation.py
static/: index.html  local_test.html
